[package]
name = "logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
name = "logic"

[dependencies]
# bevy_egui = "0.9"
# wasm-bindgen = "0.2.76"
rand = { version = "0.8.4", features = ["small_rng"] }
rand_chacha = "0.3.1"
camera_pan = { path = "../camera_pan" }
input = { path = "../input" }
map_bevy = { path = "../map_bevy" }
map = { path = "../map" }
selection = { path = "../selection" }

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "bevy_winit",
    "render",
    "x11",
] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.6", default-features = false, features = [
    "bevy_winit",
    "render",
] }
# bevy_webgl2 = "0.5"
console_error_panic_hook = "*"
